20080104 man/fuse.1: change date style (Release-0_9_0-branch) (Stuart).
20080105 disk/disk.c: initialise variables (Release-0_9_0-branch).
20080105 TAG: Release-0_9_0
20080107 Merge Release-0_9_0-branch changes r3444:3841 to trunk.
20080108 Makefile.am,configure.in,sound/Makefile.am,timer/Makefile.am,
	 ui/{gtk/Makefile.am,sdl/Makefile.am},widget/Makefile.am: tidy up
	 use of SDL_CFLAGS and SDL_LIBS.
20080113 z80/z80.c: unhalt on NMI (thanks, Simon Owen) (Stuart).
20080115 ay.c,disk/{beta.c,disk.c,wd_fdc.c}: warnings removal.
20080118 windres.rc,ui/win32/{picture.{c,h,rc},win32display.h,win32internals.h,
	 win32ui.c,Makefile.am}: add a keyboard help dialog for the Win32 UI
	 (Marek Januszewski).
20080118 ui/win32/picture.c: swap red and blue colour components (Stuart).
20080130 debugger/{commandl.l,commandy.y,debugger.c,debugger_internals.h}:
         add command to exit emulator.
20080202 ui/gtk/fileselector.c: give a default action for save dialogs.
20080203 Makefile.am,winfuse.ico: add a conversion of Paul van der Laan's icon
	 for Mac OS X Fuse to Windows ICO format (Arda Erdikmen).
20080203 ui/win32/{win32ui.c,win32display.[ch]}: allow Win32 window to be
	 resized (Stuart).
20080205 sound/win32sound.c: Windows Multimedia API sound route - allows to
	 have sound on Win32 without the need for DirectX headers (MinGW
	 currently doesn't have them) (Marek).
20080205 ui/win32/picture.{c,rc}: Win32: fix for keyboard help dialog (Marek).
20080206 configure.in,sound/Makefile.am: Win32: make autotools recognize and
	 use Windows Multimedia API header (mmsystem.h) (Marek).
20080208 ui/win32/win32ui.c: Win32: machine select dialog, minor code
	 formatting changes (Marek).
20080209 ui/win32/{debugger.c,error.c,picture.c,pokefinder.c,win32display.c,
	 win32internals.h,win32keyboard.h,win32ui.c}: formatting fixes (Stuart).
20080209 ui/win32/debugger.rc: Win32: include resource definitions from
	 debugger.h (Stuart).