@@ -2453,3 +2453,5 @@
 	 win32internals.h,win32keyboard.h,win32ui.c}: formatting fixes (Stuart).
 20080209 ui/win32/debugger.rc: Win32: include resource definitions from
 	 debugger.h (Stuart).
+20080209 sound/aosound.c,ui/win32/{debugger.h,win32ui.c}: replace C99-style
+	 '// ...' comments with '/* ... */' comments (Stuart).
